[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loopextractor"
version = "0.3.0"
dependencies = [
	"tensorly>=0.8.1",
	"librosa>=0.10.0",
	"numpy>=1.22.0",
	"scikit-learn<=1.3.2,>=1.1.0",
	"mido>=1.3.2",
]
# Madmom not listed here because its installation is tricky. Handled separately in Makefile
requires-python = ">= 3.8"
authors = [{name="Jordan B. L. Smith", email="jblsmith@gmail.com"}]
description = "Extract repeating loops from songs using Nonnegative Tucker Decomposition-based source separation"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["source separation", "loops", "audio", "music structure analysis"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Topic :: Scientific/Engineering",
	"Topic :: Multimedia :: Sound/Audio :: Analysis",
	"Topic :: Multimedia :: Sound/Audio"
]

[project.urls]
Homepage = "https://github.com/jblsmith/loopextractor"
